<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="90dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/hname"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMobileNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/mobilenum" />

                <EditText
                    android:id="@+id/editTextMobileNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="0dp"
                    android:hint="@string/hmobilenum"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/size" />

                <EditText
                    android:id="@+id/editTextSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="0dp"
                    android:hint="@string/hsize"
                    android:inputType="number" />


            </LinearLayout>

            <TextView
                android:id="@+id/textViewDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d" />

            <EditText
                android:id="@+id/editTextDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/day"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="textPersonName" />

            <CheckBox
                android:id="@+id/checkBoxTableArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tabelArea" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
